# promptdump

./: README.md  pyproject.toml
.github/workflows/: testbuildpub.yml
promptdump/: __init__.py  promptdump.py
promptify/: __init__.py
tests/: test_prompt.py
